--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/custom.css">
 
+
     <!-- Favicon with alt text -->
     <link rel="icon" href="/static/images/donut.png" type="image/png">
     <meta name="description" content="Watch episodes of The Simpsons without any bullsh!t. Find your favorite episodes, games, comics, and more.">
@@ -63,7 +64,7 @@
                 <div class="dropdown-menu w-100" aria-labelledby="extrasDropdownMenu" id="extrasDropdownMenu">
                     <a class="dropdown-item" href="/games">Games</a>
                     <a class="dropdown-item" href="#">Comics</a>
-                    <a class="dropdown-item" href="#">Music</a>
+                    <a class="dropdown-item" href="/music">Music</a>
                 </div>
             </li>
             <li class="nav-item">
