--- a/templates/video.html
+++ b/templates/video.html
@@ -12,7 +12,7 @@
 
         <div class="col-lg-3 col-md-12">
             <div class="chat-container" style="height: 100%;">
-                <iframe src="https://kiwiirc.hybridirc.com/?nick=SimpsonsFan??&theme=Dark&#NoBullShitSimpsons" style="border: 0; width: 100%; height: 100%;"></iframe>
+                <iframe src="https://web.libera.chat/gamja/?server=irc.freenode.net&port=6667&nick=SimpsonsFan&channels=#nobullshitsimpsons" style="border: 0; width: 100%; height: 100%;"></iframe>
             </div>
         </div>
     </div>
