--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,7 @@
             <div style="margin-bottom: 20px;"></div>
             <h2>Get Involved</h2>
             <p class="mb-3">
-                We encourage you to get involved and help us make "No Bullsh!t Simpsons" even better. If you encounter any bugs, quirks, or issues while using our platform, please don't hesitate to reach out. Join our IRC channel to report any problems or simply to chat with fellow Simpsons enthusiasts. Your input plays a crucial role in enhancing the user experience for everyone.
+                We encourage you to get involved and help us make "No Bullsh!t Simpsons" even better. If you encounter any bugs, quirks, or issues while using our platform, please don't hesitate to reach out. Join our Discord Server to report any problems or simply to chat with fellow Simpsons enthusiasts. Your input plays a crucial role in enhancing the user experience for everyone.
             </p>
             <p class="mb-3">
                 Thank you for being a part of our community, and we hope you enjoy your time here at "No Bullsh!t Simpsons." Happy watching!
