--- a/static/musicplayer.css
+++ b/static/musicplayer.css
@@ -60,7 +60,7 @@ body {
     animation-play-state: running;
 }
 
-.disk::before{
+/*.disk::before{
     content: '';
     position: absolute;
     top: 50%;
@@ -70,7 +70,7 @@ body {
     height: 30px;
     border-radius: 50%;
     background: #A39E29;
-}
+}*/
 
 
 .song-slider {
