--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,9 @@
                     <a class="dropdown-item" href="/music">Music</a>
                 </div>
             </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="https://discord.gg/TWu6b4b27m">Discord</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link text-white" href="/about">About</a>
             </li>
