--- a/templates/video.html
+++ b/templates/video.html
@@ -3,16 +3,10 @@
 {% block content %}
 <div class="container video-container">
     <div class="row">
-        <!-- Video iframe and Chat application on the same row -->
-        <div class="col-lg-9 col-md-12">
+        <!-- Video iframe -->
+        <div class="col-lg-12">
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe src="{{ video_url }}" class="embed-responsive-item" allowfullscreen frameborder="0" allow="fullscreen"></iframe>
-            </div>
-        </div>
-
-        <div class="col-lg-3 col-md-12">
-            <div class="chat-container" style="height: 100%;">
-                <iframe src="https://web.libera.chat/gamja/?server=irc.freenode.net&port=6667&nick=SimpsonsFan&channels=#nobullshitsimpsons" style="border: 0; width: 100%; height: 100%;"></iframe>
             </div>
         </div>
     </div>
@@ -20,7 +14,7 @@
 
 <div class="container mt-4">
     <div class="row">
-        <div class="col-lg-9 col-md-12 offset-lg-0">
+        <div class="col-lg-12 offset-lg-0 d-flex justify-content-center">
             <!-- Alert div with custom CSS for text size on mobile -->
             <div class="alert alert-danger" style="font-size: 14px;">
                 <p class="mb-0">When you first click the play button, there might be one AD that pops open a new tab if you're not using an ad blocker. Just close it and click play again. It is beyond my control. Sorry for the inconvenience.</p>
