--- a/templates/base.html
+++ b/templates/base.html
@@ -54,8 +54,14 @@
             <li class="nav-item">
                 <a class="nav-link text-white" href="/">Home</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="/seasons">Seasons</a>
+            <li class="nav-item dropdown"> <!-- Change this to a dropdown -->
+                <a class="nav-link text-white dropdown-toggle" href="#" id="watchDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Watch
+                </a>
+                <div class="dropdown-menu w-100" aria-labelledby="watchDropdown"> <!-- Change the ID and label -->
+                    <a class="dropdown-item" href="/seasons">Seasons</a> <!-- Include the "Seasons" option in the dropdown -->
+                    <a class="dropdown-item" href="">Movie</a><!-- Add other watch-related options here -->
+                </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link text-white extras-dropdown-toggle" href="#" id="extrasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
