--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                 </a>
                 <div class="dropdown-menu w-100" aria-labelledby="watchDropdown"> <!-- Change the ID and label -->
                     <a class="dropdown-item" href="/seasons">Seasons</a> <!-- Include the "Seasons" option in the dropdown -->
-                    <a class="dropdown-item" href="">Movie</a><!-- Add other watch-related options here -->
+                    <a class="dropdown-item" href="/video/784aef0e-6481-11ee-8c99-0242ac120002">Movie</a><!-- Add other watch-related options here -->
                 </div>
             </li>
             <li class="nav-item dropdown">
