--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,7 @@
                 </a>
                 <div class="dropdown-menu w-100" aria-labelledby="watchDropdown"> <!-- Change the ID and label -->
                     <a class="dropdown-item" href="/seasons">Seasons</a> <!-- Include the "Seasons" option in the dropdown -->
+                    <a class="dropdown-item" href="/dshorts">Disney+ Shorts</a> <!-- Include the "Seasons" option in the dropdown -->
                     <a class="dropdown-item" href="/video/784aef0e-6481-11ee-8c99-0242ac120002">Movie</a><!-- Add other watch-related options here -->
                 </div>
             </li>
