--- a/templates/emulator.html
+++ b/templates/emulator.html
@@ -17,11 +17,11 @@
                 EJS_core = emucode;
                 EJS_gameName = gameName;
                 EJS_color = "#0064ff";
-                EJS_pathtodata = "/static/emulatorjs/data";
+                EJS_pathtodata = "https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/";
                 EJS_gameUrl = rom;
                 EJS_DEBUG_XX = true;
             </script>
-            <script src="static/emulatorjs/data/loader.js"></script>
+            <script src="https://cdn.jsdelivr.net/gh/EmulatorJS/EmulatorJS@latest/data/loader.js"></script>
         </div>
     </div>
 </div>
