--- a/templates/dshorts.html
+++ b/templates/dshorts.html
@@ -1,21 +1,58 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-sm">
-  <div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <img src="https://www.themoviedb.org/t/p/w227_and_h127_bestv2/zp5gxcPnxv6FsDh3l7yRZurlBRr.jpg" alt="Episode Image" style="height: 100%;">
-      </div>
-      <div class="col-md-8 d-flex align-items-center">
-        <div class="card-body text-center" style="padding: 0;padding-left: 43px;">
-          <h5 class="card-title">Episode Title</h5>
-          <p class="card-text text-muted">Rating: 8.5 | Airdate: 2023-10-13</p>
-          <a href="#" class="btn btn-primary">View Details</a>
-          <a href="#" class="btn btn-secondary">Watch</a>
+<div class="container">
+    <div class="row">
+        {% for episode in disney_shorts_data %}
+        <div class="col-md-6 mb-4">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="d-flex flex-row">
+                    <div class="card-img-container">
+                        <img src="{{ episode['Thumbnail'] }}" alt="Episode {{ episode['Episode Number'] }} Image" class="card-img img-fluid h-100">
+                    </div>
+                    <div class="card-details">
+                        <div class="card-body">
+                            <h5 class="card-title font-weight-bold" style="max-width: 200px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">{{ episode['Episode Title'] }}</a></h5>
+                            <p class="card-text"><small class="text-muted">Rating: {{ episode.get('Rating', '') }} - Air Date: {{ episode.get('Air Date', '') }}
+                                - Runtime: {{ episode.get('Runtime', '') }}</small></p>
+                            <!-- Button group for View Details and Watch buttons -->
+                            <div class="d-flex justify-content-end">
+                                <div class="btn-group" role="group">
+                                    <!-- Button trigger modal -->
+                                    <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModal{{ episode['Episode Number'] }}">
+                                        View Details
+                                    </button>
+                                    <!-- Watch button -->
+                                    <a href="{{ url_for('video', video_uuid=episode.get('uuid', '')) }}" class="btn btn-info ml-2">Watch</a>
+                                </div>
+                            </div>
+
+                            <!-- Modal -->
+                            <div class="modal fade" id="exampleModal{{ episode['Episode Number'] }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                              <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                  <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">{{ episode['Episode Title'] }}</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                      <span aria-hidden="true">×</span>
+                                    </button>
+                                  </div>
+                                  <div class="modal-body">
+                                    {{ episode.get('Episode Description', '')|safe }}
+                                  </div>
+                                  <div class="modal-footer">
+                                    <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+        {% endfor %}
     </div>
-  </div>
 </div>
 {% endblock %}
+
