--- a/templates/base.html
+++ b/templates/base.html
@@ -69,8 +69,8 @@
                     Extras
                 </a>
                 <div class="dropdown-menu w-100" aria-labelledby="extrasDropdownMenu" id="extrasDropdownMenu">
-                    <a class="dropdown-item" href="/games">Games</a>
-                    <a class="dropdown-item" href="#">Comics</a>
+<!--                    <a class="dropdown-item" href="/games">Games</a>-->
+<!--                    <a class="dropdown-item" href="#">Comics</a>-->
                     <a class="dropdown-item" href="/music">Music</a>
                 </div>
             </li>
