--- a/templates/shorts.html
+++ b/templates/shorts.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        {% for episode in sho3rt_shorts_data %}
+        {% for episode in data %}
         <div class="col-md-6 mb-4">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="d-flex flex-row">
