--- a/templates/base.html
+++ b/templates/base.html
@@ -65,6 +65,14 @@
                     <a class="dropdown-item" href="/video/21098958-4bdc-4e22-90b3-4060b21a5f90">Movie</a><!-- Add other watch-related options here -->
                 </div>
             </li>
+            <li class="nav-item dropdown"> <!-- Change this to a dropdown -->
+                <a class="nav-link text-white dropdown-toggle" href="#" id="networkDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    No Bullsh!t Network Sites
+                </a>
+                <div class="dropdown-menu w-100" aria-labelledby="watchDropdown"> <!-- Change the ID and label -->
+                    <a class="dropdown-item" href="https://nobsbb.online/">Bobs Burgers</a> <!-- Include the "Seasons" option in the dropdown -->
+                </div>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link text-white extras-dropdown-toggle" href="#" id="extrasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Extras
