--- a/templates/base.html
+++ b/templates/base.html
@@ -71,6 +71,7 @@
                 </a>
                 <div class="dropdown-menu w-100" aria-labelledby="watchDropdown"> <!-- Change the ID and label -->
                     <a class="dropdown-item" href="https://nobsbb.online/">Bobs Burgers</a> <!-- Include the "Seasons" option in the dropdown -->
+                    <a class="dropdown-item" href="https://futurama.nobss.online">Futurama</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
