--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Watch episodes of The Simpsons without any bullsh!t.">
+    <meta name="keywords" content="
+    The Simpsons,
+    Watch The Simpsons online,
+    The Simpsons full episodes,
+    The Simpsons all seasons,
+    Stream The Simpsons,
+    The Simpsons ad-free,
+    The Simpsons free streaming,
+    The Simpsons episodes online,
+    The Simpsons watch free,
+    The Simpsons no ads
+">
     <title>No Bullsh!t Simpsons - Watch The Simpsons with no ADs or Trackers!</title>
 
     <!-- Combined CSS files -->
@@ -72,6 +85,8 @@
                 <div class="dropdown-menu w-100" aria-labelledby="watchDropdown"> <!-- Change the ID and label -->
                     <a class="dropdown-item" href="https://nobsbb.online/">Bobs Burgers</a> <!-- Include the "Seasons" option in the dropdown -->
                     <a class="dropdown-item" href="https://futurama.nobss.online">Futurama</a>
+                    <a class="dropdown-item" href="https://shorturl.nobss.online">Url Shortner</a>
+                    <a class="dropdown-item" href="https://ced.nobss.online">CRX Downloader</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
