--- a/templates/video.html
+++ b/templates/video.html
@@ -23,4 +23,21 @@
     </div>
 </div>
 
+<!-- Play Next Episode Button -->
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-lg-12 d-flex justify-content-center">
+            {% if next_episode %}
+                <a href="{{ url_for('video', video_uuid=next_episode.uuid) }}" class="btn btn-primary">Play Next Episode: {{ next_episode['Episode Title'] }}</a>
+            {% else %}
+                <p>End of Current Seasons Episodes</p>
+            {% endif %}
+        </div>
+    </div>
+</div>
+
+
+
+
+
 {% endblock %}
